--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     
     html {
       scroll-behavior: smooth;
+      scroll-padding-top: 80px;
+    }
+
+    @media (prefers-reduced-motion: no-preference) {
+      html {
+        scroll-behavior: smooth;
+      }
     }
     
     body {
@@ -984,7 +991,7 @@
   <!-- Botão Enviar Arquivo Flutuante -->
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSeRY3yktudHIXyrhpEJ5qtOZ_-epeDGTeKcvLfjjkLykOg9GQ/viewform?usp=publish-editor" target="_blank" class="upload-float" aria-label="Enviar Arquivo">
     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-      <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm4 18H6V4h7v5h5v11zm-5-6v4h-2v-4H8l4-4 4 4h-3z"/>
+      <path d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"/>
     </svg>
   </a>
 
@@ -1019,10 +1026,18 @@
       navMenu.classList.toggle('active');
     });
 
-    // Close menu when clicking a link
-    document.querySelectorAll('.navbar-menu a').forEach(link => {
-      link.addEventListener('click', () => {
+    // Close menu when clicking a link + smooth scroll
+    document.querySelectorAll('.navbar-menu a, .links a[href^="#"]').forEach(link => {
+      link.addEventListener('click', (e) => {
         navMenu.classList.remove('active');
+        const href = link.getAttribute('href');
+        if (href && href.startsWith('#')) {
+          e.preventDefault();
+          const target = document.querySelector(href);
+          if (target) {
+            target.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          }
+        }
       });
     });
 
